# teste-api

./: Pedidos.json  app.py  pyproject.toml  request-app.py  restaurantes_1.json
