[tool.poetry]
name = "poetry-teste"
version = "0.1.0"
description = ""
authors = ["Laís Urano <95968249+uranolais@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
